tests/sksl/errors/Ossfuzz39000.glsl
### Compilation failed:

error: 2: expected ';', but found '='
G { int q=_; };
         ^
1 error
